<resources>
    <string name="app_name">MichaleProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Home Fragment</string>


    //nearby fragment
    <string name="stores">Stores</string>
    <string name="malls">Malls</string>
    <string name="food">Food</string>
    <string name="view_as">View as List</string>

    // categories fragment
    <string name="demo_item">Demo item</string>
    
    
    //base activity
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="categories">Categories</string>
    <string name="favourite">Favourite</string>

    //favourite fragment
    <string name="two_favourites">2 Fabourities</string>
    <string name="add_store">+ Add Store</string>
    <string name="dominos">Dominos</string>
    <string name="parkavenu">Park Avenue</string>
    <string name="morestores">More Stores you may like</string>

    //navigation items
    <string name="nav_home">Home</string>
    <string name="nav_nearby">Nearby</string>
    <string name="nav_fab">Favorites</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_logout">Logout</string>
    <string name="close">Close</string>
    <string name="open">Open</string>




</resources>
