<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.Fragment_nearby">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_optionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3">
                <TextView
                    android:id="@+id/txt_stores"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/stores"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/down_arrow"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="2dp"
                    android:layout_toRightOf="@+id/txt_stores"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3">
                <TextView
                    android:id="@+id/txt_malls"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/malls"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/down_arrow"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="2dp"
                    android:layout_toRightOf="@+id/txt_malls"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3">
                <TextView
                    android:id="@+id/txt_food"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/food"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/down_arrow"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="2dp"
                    android:layout_toRightOf="@+id/txt_food"/>
            </RelativeLayout>

        </LinearLayout>




        <RelativeLayout
            android:id="@+id/layout_footer"
            android:padding="5dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_medium"
                android:padding="10dp"
                android:text="@string/view_as"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/layout_optionbar"
            android:layout_above="@+id/layout_footer">

            <ImageView
                android:id="@+id/img_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/map"/>

        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>
