<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragments.Fragment_favourities">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                                android:layout_height="match_parent">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout_liniear_parrent"
                android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <TextView android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_centerVertical="true"
                              android:layout_marginLeft="30dp"
                              android:layout_alignParentLeft="true"
                              android:text="@string/two_favourites"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/add_stores"/>

                </RelativeLayout>

                <ScrollView
                    android:id="@+id/layout_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/black">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginBottom="1dp"
                            android:background="@color/gray">
                            <RelativeLayout
                                android:id="@+id/layout_img"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp">
                                <ImageView
                                    android:id="@+id/img_brand_logo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/dominos"/>
                            </RelativeLayout>


                            <TextView
                                android:layout_toRightOf="@+id/layout_img"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="30dp"
                                android:text="@string/dominos"/>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                            </LinearLayout>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="30dp"
                                android:src="@drawable/heart"/>


                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginBottom="1dp"
                            android:background="@color/gray">
                            <RelativeLayout
                                android:id="@+id/layout_img_two"
                                android:layout_centerVertical="true"
                                android:layout_alignParentLeft="true"
                                android:layout_marginLeft="20dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="10dp">
                                <ImageView
                                    android:id="@+id/img_brand_logo_two"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/parkavenue"/>
                            </RelativeLayout>


                            <TextView
                                android:layout_toRightOf="@+id/layout_img_two"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginLeft="30dp"
                                android:text="@string/dominos"/>


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">

                            </LinearLayout>

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="30dp"
                                android:src="@drawable/heart"/>


                        </RelativeLayout>
                    </LinearLayout>
                </ScrollView>


                <RelativeLayout
                    android:id="@+id/layout_moreitems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/morestores"/>
                </RelativeLayout>


                <!--<GridView-->
                <!--android:id="@+id/view_grid"-->
                <!--android:layout_below="@+id/layout_moreitems"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:columnWidth="90dp"-->
                <!--android:numColumns="3"-->
                <!--android:verticalSpacing="10dp"-->
                <!--android:horizontalSpacing="10dp"-->
                <!--android:stretchMode="columnWidth"-->
                <!--android:gravity="center"-->
                <!--/>-->

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
